[gd_scene load_steps=19 format=3 uid="uid://bgsvwdjp0fq2e"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ffxx4"]
[ext_resource type="Texture2D" uid="uid://biu1kq2231872" path="res://assets/sprites/player/WALKINGCYCLE.png" id="2_8lbpl"]
[ext_resource type="Texture2D" uid="uid://d2eceype7lmln" path="res://assets/sprites/player/jumpt.png" id="2_28kaf"]
[ext_resource type="Texture2D" uid="uid://uc0hamraqvs8" path="res://assets/sprites/player/idlet.png" id="3_n7a7a"]
[ext_resource type="AudioStream" uid="uid://ctphu5kjs536d" path="res://assets/sounds/jump.wav" id="5_v8gk3"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="6_2qefr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m4hwl"]
atlas = ExtResource("2_28kaf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjaqu"]
atlas = ExtResource("3_n7a7a")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqgqj"]
atlas = ExtResource("2_28kaf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv65g"]
atlas = ExtResource("2_8lbpl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl6ws"]
atlas = ExtResource("2_8lbpl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b8kx"]
atlas = ExtResource("2_8lbpl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_44886"]
atlas = ExtResource("2_8lbpl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y051m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4hwl")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjaqu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqgqj")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv65g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl6ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b8kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44886")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tcl8"]
size = Vector2(7, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnf0u"]
size = Vector2(7, 14)

[sub_resource type="Animation" id="Animation_ulne7"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ak60t"]
_data = {
"jump": SubResource("Animation_ulne7")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ffxx4")
movement_speed = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y051m")
animation = &"idle"
speed_scale = 3.0

[node name="collisionbox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_0tcl8")

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_lnf0u")

[node name="explosion" type="CPUParticles2D" parent="."]
top_level = true
scale = Vector2(4, 4)
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
speed_scale = 0.25
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 971.08)
initial_velocity_min = 217.59
initial_velocity_max = 406.8
angular_velocity_min = -232.73
angular_velocity_max = 300.0

[node name="particles" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_v8gk3")
volume_db = 5.725

[node name="Camera2D" type="Camera2D" parent="."]
top_level = true
anchor_mode = 0
script = ExtResource("6_2qefr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.5, 4.76837e-07)
scale = Vector2(0.35, 0.8)

[node name="coyote_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ak60t")
}
speed_scale = 2.0

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
